[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "torch>=2.0",    # torch es necesario para compilar la extensión
    "numpy>=1.26.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "kat_rational"
version = "0.4"
author = "adamdad"
author_email = "yxy_adadm@qq.com"
description = "CUDA-optimised group-wise rational function for KAT"
readme = "README.md"
python_requires = ">=3.8"
dependencies = [
    "torch>=2.0",
    "numpy>=1.26.4",
    "triton>=2.1.0; sys_platform != 'win32'",
    "triton-windows>=2.1.0; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/Adamdad/rational_kat_cu"